@@ -3,6 +3,8 @@ nplan (0.32~16.04.5) UNRELEASED; urgency=medium
   * bond/bridge: Support suffixes for time-based values so things like
     "mii-monitor-interval" can support milliseconds. (LP: #1745597)
   * Do not attempt to rebind driver 'qeth'. (LP: #1756322)
+  * Allow setting ClientIdentifier=mac for networkd-renderered devices
+    (LP: #1738998)
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Thu, 19 Apr 2018 11:17:54 -0400
 
